added comparator function to tag collection

--- a/app/views/links/index.html.haml
+++ b/app/views/links/index.html.haml
@@ -29,7 +29,7 @@
     #linkList{:data => {:page => 'links'}}
 :javascript
   $(document).ready(function() {
-  	Tags.reset(#{Tag.all.to_json});
+  	Tags.reset(#{Tag.all.to_json(:methods => :time)});
   	Links.reset(#{@links.to_json});
   });
 
