--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 %head
-  %title tytc
+  %title teach yourself to code
   = stylesheet_link_tag "application"
   = javascript_include_tag "application"
   = csrf_meta_tag
