added some meta to page source

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,8 @@
 %html
   %head
     %title teach yourself to code
+    / ....is open source! Check out https://github.com/kateray/tytc
+    <meta name = "description" content = "Link sharing site for the best programming tutorials and resources">
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
     = csrf_meta_tag
