added name to bottom of page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,3 +30,5 @@
             = link_to 'Login', '/login'
     .content
       = yield
+      .author
+        made with love by <a href="/kateray">kateray</a>
