not sure why footer wasn't showing up in production....

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,5 +30,6 @@
             = link_to 'Login', '/login'
     .content
       = yield
-      .author
+    .content
+      .footer
         made with love by <a href="/kateray">kateray</a>
