--- a/app/views/templates/_link.html.haml
+++ b/app/views/templates/_link.html.haml
@@ -5,7 +5,7 @@
       %span.vote_count
         ${votes_count}
     .link
-      <a href= "${url}" class="link_url">${title}</a>
+      <a href= "${url}" target="_blank" class="link_url">${title}</a>
       <a href= "/links/${id}" class="link_comments">${comments_count} comments</a>
       %br
       .description
