--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,12 +11,12 @@
     = render "application/ga"
   %body{:class => "#{controller_name} #{action_name}"}
     <a href="http://github.com/kateray/tytc"><img style="position: absolute; top: 0; right: 0; border: 0; z-index:10;" src="https://a248.e.akamai.net/camo.github.com/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub"></a>
-    - if flash[:error]
-      = content_tag :div, flash[:error], :id => "flash_error"
-    - if flash[:notice]
-      = content_tag :div, flash[:notice], :id => "flash_notice"
-    - if flash[:alert]
-      = content_tag :div, flash[:alert], :id => "flash_alert"
+    -# - if flash[:error]
+    -#   = content_tag :div, flash[:error], :id => "flash_error"
+    -# - if flash[:notice]
+    -#   = content_tag :div, flash[:notice], :id => "flash_notice"
+    -# - if flash[:alert]
+    -#   = content_tag :div, flash[:alert], :id => "flash_alert"
     %p.notice
       = notice
     %p.alert
