--- a/app/views/links/index.html.haml
+++ b/app/views/links/index.html.haml
@@ -1,32 +1,44 @@
-#left_col
-  .left_container{:data => {:group => "Level"}}
-    .heading level
-    .tag_list
-  .left_container{:data => {:group => "Language"}}
-    .heading language
-    .tag_list
-    - if current_user
-      .tag_error
-      .tag_option
-        .new_tag_field{:class => "field", :contenteditable => true, :data => {:group => "Language"}}
-          New Language
-  .left_container{:data => {:group => "Category"}}
-    .heading category
-    .tag_list
-    - if current_user
-      .tag_error
-      .tag_option
-        .new_tag_field{:class => "field", :contenteditable => true, :data => {:group => "Category"}}
-          New Category
-#right_col
-  - if current_user
+.row
+  #main-column.col-md-10.col-sm-9.col-xs-12
     = render "links/new"
-  #links_container
-    #linkShow_container
-      %a{:id => "show_index", :href => '/'}
-        <-- Back to Index
-      #linkShow
-    #linkList{:data => {:page => 'links'}}
+    #links_container
+      #linkShow_container
+        %a{:id => "show_index", :href => '/'}
+          <-- Back to Index
+        #linkShow
+      #search-message
+      #linkList{:data => {:page => 'links'}}
+
+  #right-column.col-md-2.col-sm-3.col-xs-6
+    .left_container{:data => {:group => "Level"}}
+      .heading Level
+      .tag_list
+    .left_container{:data => {:group => "Language"}}
+      .heading Language
+      .tag_list
+      .tag-option#expand-language-tags ...
+      - if current_user
+        .tag_error
+        .tag-option
+          .new_tag_field{:class => "field", :contenteditable => true, :data => {:group => "Language"}}
+            New Language
+    .left_container{:data => {:group => "Category"}}
+      .heading Category
+      .tag_list
+      .tag-option#expand-category-tags ...
+      - if current_user
+        .tag_error
+        .tag_option
+          .new_tag_field{:class => "field", :contenteditable => true, :data => {:group => "Category"}}
+            New Category
+-# #right_col
+-#   = render "links/new"
+-#   #links_container
+-#     #linkShow_container
+-#       %a{:id => "show_index", :href => '/'}
+-#         <-- Back to Index
+-#       #linkShow
+-#     #linkList{:data => {:page => 'links'}}
   .author
     made with love by <a href="/kateray">kateray</a>
 :javascript
