--- a/app/views/templates/_link.html.haml
+++ b/app/views/templates/_link.html.haml
@@ -1,13 +1,18 @@
 %script{:type => "text/x-jquery-tmpl", :id => "linkTemplate"}
-  .link_container
-    .vote
-      .vote_button
-      %span.vote_count
-        ${votes_count}
-    .link
-      <a href= "${url}" target="_blank" class="link_url">${title}</a>
-      <a href= "/links/${id}" class="link_comments">${comments_count} comments</a>
-      %br
-      .description
-        ${description}
-      {{each taggings}} <div class ="link_tag"> ${$value} </div> {{/each}}
+  .link_container.container
+    .row
+      .col-md-1
+        .vote
+          %span.vote_count
+            ${votes_count}
+          = image_tag "heart-outline.png"
+          -# .vote_button
+      .col-md-9
+        .link
+          <a href= "${url}" target="_blank" class="link_url">${title}</a>
+          <a href= "/links/${id}" class="link_comments">${comments_count} comments</a>
+          %br
+          .description
+            ${description}
+          .link-tags
+            {{each taggings}} ${$value}, {{/each}}
